fix: text wrap

--- a/QualarooMobileSDK.framework/qualaroo-custom.css
+++ b/QualarooMobileSDK.framework/qualaroo-custom.css
@@ -296,6 +296,7 @@ div#qual_ol form.qual_ol_ans_box.vertical-arrangement .qual_ol_ans_item {
     text-align: left;
     margin: 0 0 10px 0;
     white-space: normal;
+    overflow-wrap: break-word;
 }
 
 div#qual_ol form.qual_ol_ans_box.vertical-arrangement .qual_ol_ans_item:last-child {
